<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MADelivery Biker</string>
    <string name="form_name">Name</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="form_phone">Phone number</string>
    <string name="form_info">Additional information</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="gallerypermission">Allow the Gallery usage in settings to use this funcionality.</string>
    <string name="camerapermission">Allow the camera usage in settings to use this funcionality.</string>
    <string name="title_activity_navigation_drawer" translatable="false">navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="notification_text">A new order has arrived. Look at the delivery page to see it</string>
    <string name="delivery_to">Delivery to:&#160;</string>
    <string name="pick_up">Pick-up:&#160;</string>
    <string name="customerName">Customer:&#160;</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoiZW5uaW9yaWNjb2JlbmUiLCJhIjoiY2p2cDAwaWpiMWM2cTRhdm4xa2doMWR4aSJ9.13f4K6NH4ybrj9iPVzG7kA</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="to_restaurant">Restaurant</string>
    <string name="to_customer">Customer</string>
    <string name="start_navigation">Start navigation</string>
    <string name="road_to">Road to</string>
    <string name="Profile">Profile</string>
    <string name="Pending">Pending</string>
    <string name="History">History</string>
    <string name="Deliveries">Deliveries</string>
    <string name="gps_permission_msg">Allow the GPS usage in settings to let the app work properly.</string>
    <string name="caricamento_fallito">Upload Failure</string>
    <string name="pic_saved">Data Saved!</string>

    <string name="average_rating">Average Rating</string>
    <string name="number_deliveries">Number of deliveries</string>
    <string name="km_travelled">Km travelled</string>
    <string name="money_earned">Money earned</string>
    <string name="deliveries">Deliveries</string>
    <string name="profile">Profile</string>
    <string name="analytics">Analytics</string>
    <string name="activeswitch">ActiveSwitch</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="my_stats">MY STATS</string>
    <string name="navigation">Navigation</string>

</resources>
