<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_deliviries"
        android:icon="@drawable/ic_delivery"
        android:title="@string/deliveries" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_action_user"
        android:title="@string/profile" />
    <item
        android:id="@+id/nav_analytic"
        android:icon="@drawable/ic_analytics"
        android:title="@string/analytics" />
    <item
        android:id="@+id/nav_switch"
        android:icon="@drawable/ic_biker"
        app:actionLayout="@layout/layout_switch"
        android:title="@string/activeswitch"
        />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>

