<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deliveryItemCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/deliveryItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurantAddress_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurantName"
            android:layout_marginTop="6dp"
            android:text="@string/pick_up"
            android:textColor="#000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/restaurantAddress"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/restaurantAddress_bold"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/restaurantAddress_bold"
            android:text=""
            android:textColor="#777"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/customerAddress_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/restaurantAddress"
            android:layout_marginTop="3dp"
            android:maxWidth="250dip"
            android:text="@string/delivery_to"
            android:textColor="#000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customerAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/customerAddress_bold"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/customerAddress_bold"
            android:maxWidth="250dip"
            android:textColor="#777"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/customerName_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customerAddress"
            android:layout_marginTop="3dp"
            android:text="@string/customerName"
            android:textColor="#000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/customerName_bold"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/customerName_bold"
            android:maxWidth="250dip"
            android:textColor="#777"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/customerName"
            android:layout_alignParentEnd="true"
            android:textColor="#777"
            android:textSize="13sp"
            android:textStyle="italic" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
